Fixed Project Links to display correctly responsively on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,14 @@ h1 {
 
 /* Other */
 
+.image-container {
+	position: relative;
+}
+
 img {
 	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	height: auto;
 	object-fit: cover;
 
 	-webkit-user-drag: none;
@@ -53,10 +58,24 @@ img {
 	-ms-user-select: none;
 }
 
-.btn {
+.project-links {
+	position: absolute;
+	width: 500px;
+	bottom: 0%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+.image-container .btn {
+	/* position: relative; */
 	padding: 0 5%;
 	margin: 0 5%;
+	display: inline;
+	/* bottom: 50px; */
+}
 
-	position: relative;
-	bottom: 50px;
+.project-summary {
+	background-color: #f7f7f7;
+	text-align: left;
 }
